Prevent track list closing due to the album being scrolled out of view: introduce a max-height and make that track list scrollable itself. Also better styling

--- a/css/style.css
+++ b/css/style.css
@@ -159,16 +159,19 @@ h1 span:hover .play {
 	margin-left: 195px;
 	padding: 0 10px;
 	background: white;
-	transition: box-shadow 0.2s, margin-top 0.4s;
+	transition: margin-top 0.4s;
 }
 
 .album-area .track-list.expanded {
-	position: relative;
+	position: absolute;
+	border-radius: 2px;
+	max-height: 700px;
+	overflow-y: scroll;
 	z-index: 99;
 	margin-top: -100px;
-	padding: 30px 10px;
+	padding: 30px 40px 30px 10px;
 	box-shadow: 0px 10px 35px -5px rgba(0,0,0,0.75);
-	transition: box-shadow 0.2s, margin-top 0.4s;
+	transition: margin-top 0.4s;
 }
 
 .backdrop {
